CCR-04 part 1: declare AggregateView in OpenAPI; make types
